# north-link

./: .dev-state.yaml  .gitignore  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  health.py  main.py  seed.py
backend/app/core/: __init__.py  auth.py  encryption.py  exceptions.py  middleware.py  pagination.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/chat/: __init__.py  ai_engine.py  models.py  router.py  schemas.py  service.py
backend/app/modules/logistics/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/merchant/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/notification/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/order/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/price/: __init__.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_routes.py  test_logistics_routes.py  test_merchant_routes.py  test_price_routes.py  test_recommendation_routes.py  test_settings_routes.py
backend/tests/unit/: test_auth.py  test_auth_service.py  test_calculator.py  test_encryption.py  test_exceptions.py  test_logistics_service.py  test_merchant_service.py  test_pagination.py  test_price_service.py  test_recommendation_service.py  test_schemas.py  test_settings_service.py
docs/: deployment.md  (+2 more)
(+172 files in other folders)
